Fixes: corrected the distorting of the nav bar

--- a/src/components/AppNavBar.css
+++ b/src/components/AppNavBar.css
@@ -34,6 +34,6 @@
     height: 39px;
 }
 
-.navbar {
+.AppNavBar .navbar {
     position: fixed;
 }
